# comm-avoiding-cuts-cc

./: .gitignore  .zenodo.json  CMakeLists.txt  README.md  build_daint.sh  build_daint_profile.sh  wercker.yml
evaluation/R/: common.R  e1.R  e3.R  e4.R
evaluation/data/: header.csv
evaluation/data/e1/: 32k.csv  48k.csv  64k.csv  96k.csv  96k_extras.csv  baselines.csv  ws.csv
evaluation/data/e3/: 16M.csv  256k.csv  8M.csv  baselines.csv
evaluation/data/e4/: baselines.csv  data.csv  rmats.csv
evaluation/data/e6/: data.csv
evaluation/data/legacy/: 16k_16_regular_lc.csv  16k_64_regular_lc_hc_switch.csv  8k_128_reg_strong.csv  8k_1k_dense_strong.csv  8k_reg_density_variation.csv
experiment_runners/: ad2.sh  ads.sh  as1.sh  awx.sh  baseline_cc.sh  baseline_multiplex_1.sh  cc1.sh  cc2.sh  cc2_pbgl_misses.sh  cc_cc_seq.sh  cc_seq.sh  click.sh  coarse_strong_scaling.sh  common.sh  d1.sh  d1x.sh  d2.sh  fp.sh  pair_seq_papi.rb  parallel_papi_transform.rb  pull_fresh_data.sh  real_world.sh  s1.sh  s2.sh  strong_scaling.sh  verification.sh
input_generators/: awx_generator.sh  cccseq_generator.sh  rmat_driver.sh  small_density_variation.sh  unfuck_levine_input.sh  verification_graphs.sh
lib/: prng_engine.hpp
lib/galois/: CMakeLists.txt
lib/galois-bin/include/Galois/: config.h
lib/galois-bin/include/Galois/Runtime/: DeterministicWork.h
lib/galois-bin/include/llvm/Support/: DataTypes.h
lib/galois/apps/avi/: CMakeLists.txt
lib/galois/apps/betweennesscentrality/: BetweennessCentralityOuter.cpp
lib/galois/apps/bfs/: bfs.cpp
lib/galois/inputs/des/: csaArray32.net  csaArray8.net  koggeStone128bit.net  koggeStone16bit.net  koggeStone32bit.net  koggeStone64bit.net  multTree12bit.net
lib/galois/inputs/meshes/: r10k.1.ele  r10k.1.node  r10k.node
lib/galois/inputs/pta/: ex_constraints.txt
lib/parmetis/: BUILD.txt  CMakeLists.txt
lib/parmetis/include/: CMakeLists.txt  parmetis.h
src/: AdjacencyListGraph.cpp  AdjacencyListGraph.hpp  ApproximateCut.cpp  ApproximateCut.hpp  CLICKIteratedSampling.cpp  CLICKIteratedSampling.hpp  CMakeLists.txt  DisjointSets.hpp  FileIteratedSampling.cpp  FileIteratedSampling.hpp  IteratedSparseSampling.hpp  MPICollector.cpp  MPICollector.hpp  MPIDatatype.cpp  MPIDatatype.hpp  SequentialKargerSteinCut.cpp  SequentialKargerSteinCut.hpp  SequentialSquareRootCut.cpp  SequentialSquareRootCut.hpp  SquareRootCut.cpp  SquareRootCut.hpp  UnweightedGraph.hpp  UnweightedIteratedSparseSampling.cpp  UnweightedIteratedSparseSampling.hpp  WeightedIteratedSparseSampling.cpp  WeightedIteratedSparseSampling.hpp  adjacency_matrix.hpp  utils.cpp  utils.hpp
src/executables/: CMakeLists.txt  approx_cut.cpp  bgl_cc.cpp  boost_stoer_wagner.cpp  click_parallel_cc.cpp  complete_graph_generator.cpp  connectivity.cpp  er_generator.cpp  galois_cc.cpp  graph2galois.cpp  karger_stein.cpp  levine_transform.cpp  metis.cpp  normalize_gplus.cpp  normalize_gplus.rb  normalize_snap.rb  parallel_cc.cpp  pbgl_cc.cpp  seq_square_root.cpp  simple_generator.cpp  sorting_test.cpp  square_root.cpp  sw_generator.cpp  transition.cpp
src/input/: CLICK.hpp  GraphInputIterator.cpp  GraphInputIterator.hpp
src/karger-stein/: adjacency_array.hpp  bulk_union_find.cpp  bulk_union_find.h  co_mincut.cpp  co_mincut.h  co_mincut_base_case.hpp  indexed_adjacency_matrix.hpp  lazy_adjacency_matrix.hpp  matrices.hpp  sparse_graph.hpp  stack_allocator.cpp  stack_allocator.h  sum_tree.hpp  update_heap.hpp
src/recursive-contract/: connected_components.cpp  connected_components.hpp  disjoint_sets.hpp  graph_slice.hpp  parallel_contract.cpp  parallel_contract.hpp  recursive_contract.cpp  recursive_contract.hpp
src/sorting/: SamplingSorter.hpp
src/test/: sorting.h  testing_utility.h
test_inputs/: cc_13.graph  cc_8.graph  complete_4.graph  cycle_10.graph  cycle_20.graph  cycle_4.graph  cycle_6.graph
utils/: cut.py  generate.py  io_utils.py
